// Copyright Â© 2017-2018 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/stratumn/alice/grpc/ext/ext.proto";

package stratumn.alice.grpc.indigo.store;

option go_package = "github.com/stratumn/alice/grpc/indigo/store;store";

// The Indigo Store service definition.
service IndigoStore {
    // Get store information.
    rpc GetInfo(InfoReq) returns (InfoResp) {
        option (stratumn.alice.grpc.ext.method_desc) = "Get information about the Indigo Store service";
    }
}

message InfoReq {
}

message InfoResp {
    bytes store_info = 1 [
        (stratumn.alice.grpc.ext.field_desc) = "Indigo Store information"
    ];
}
